page about (add funfact and pie chart without animation, then add animation in team section) and tidy up structure

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,6 +13,8 @@ nav {
     position: sticky;
     top: 0;
     box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    z-index: 999;
 }
 
 .deskripsi-produk p {
