--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -11,7 +11,6 @@ body {
 }
 
 /* NAVBAR */
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -37,6 +36,7 @@ nav {
     display: flex;
     list-style: none;
     gap: 50px;
+    z-index: 101;
 }
 
 .nav-link a {
@@ -57,7 +57,7 @@ nav {
     background-color: white;
     list-style: none;
     padding: 10px 0;
-    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1); /* */
     left: 50%;
     transform: translateX(-50%);
 }
@@ -76,95 +76,127 @@ nav {
 .nav-link li:hover .dropdown {
     display: block;
 }
-
 /* END OF NAVBAR */
 
-.pageTitle {
-    display: flex;
-    justify-content: left;
-    margin: 30px 80px;
+.title {
+    text-align: center;
+    margin: 40px 0;
 }
-.pageTitle h3 {
-    font-size: 30px;
+
+.title h1 {
+    font-size: 2.5rem;
     color: #333;
-    font-family: 'poppins', sans-serif;
 }
-.product-list {
+
+.shop-container {
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
-    margin: 0px 150px;
+    gap: 20px;
+    padding: 40px;
+    justify-content: center;
+    background-color: #ffffff;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
 }
-.product {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    border: 1px solid #f4f4f4;
-    padding: 1rem;
-    margin: 1rem;
-    flex-basis: calc(20% - 5px); /* untuk mengatur 4 item dalam setiap baris */
-    text-align: left;
-}
-.product:hover {
-    border: 1px solid #000;
-}
-.product img {
-    display: flex;
-    justify-content: left;
-    max-width: 100%;
-    height: auto;
-}
-.product img:hover {
-    cursor: pointer
-}
-.product hr {
-    margin: 1rem 0;
-    border: 0;
-    border-top: 1px solid hsl(0, 0%, 70%);
-}
-.product h3 {
-    display: flex;
-    font-size: 16px;
-    font-family: 'poppins', sans-serif;
-}
-.product h3:hover {
+
+.product-item {
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: center;
+    width: calc(25% - 20px); 
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     cursor: pointer;
-    text-decoration: underline;
+    display: none; 
 }
-.product a {
+
+.product-item:hover {
+    border: 1px solid #000000;
+}
+
+.product-item img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-bottom: 2px solid #000000;
+}
+
+.product-item a {
     text-decoration: none;
     color: #000000;
 }
-.product p {
-    margin: 7px 0;
-    color: #555;
-    font-size: 12px;
+
+.product-item h3 {
+    display: inline-flex;
+    float: left;
+    font-size: 18px;
+    font-family: 'poppins', sans-serif;
+    margin: 15px 20px 20px 20px;
+    color: #333;
 }
 
-/* Pagination */
+.product-item .price {
+    display: inline-flex;
+    float: right;
+    font-size: 16px;
+    font-family: 'poppins', sans-serif;
+    margin: 15px 20px 20px 20px;
+    color: #333;
+}
 
+/* PAGINATION */
 .pagination {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
-}
-.pagination button {
-    background-color: #f4f4f4;
-    border: 1px solid #ccc;
-    color: #333;
-    padding: 8px 16px;
-    margin: 0 5px;
-    cursor: pointer;
-}
-.pagination button:hover {
-    background-color: #e9e9e9;
-}
-.pagination span {
-    background-color: #f4f4f4;
-    border: 1px solid #ccc;
-    color: #333;
-    padding: 8px 16px;
-    margin: 0 5px;
+    align-items: center;
+    margin-top: 30px;
 }
 
-/* End Of Pagination */
+.pagination a {
+    color: #000000;
+    padding: 10px 20px;
+    margin: 20px 5px 50px 5px;
+    border: 1px solid #000000;
+    font-weight: 600;
+    transition: all 0.3s ease;
+}
+
+.pagination a.active {
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    border: 1px solid #ffffff;
+}
+
+.pagination a:hover {
+    cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+    .product-item {
+        width: calc(33.333% - 20px);
+    }
+}
+
+@media (max-width: 768px) {
+    .shop-container {
+        padding: 20px;
+    }
+
+    .product-item {
+        width: calc(50% - 20px);
+        margin-bottom: 20px;
+    }
+
+    .pagination a {
+        padding: 8px 15px;
+        margin: 50px 3px;
+    }
+}
+
+@media (max-width: 480px) {
+    .product-item {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
