--- a/CSS/product.css
+++ b/CSS/product.css
@@ -105,9 +105,11 @@ img{
     display: flex;
     width: 100%;
     transition: all 0.5s ease;
+
 }
 .img-showcase img{
     min-width: 100%;
+    margin-top: 90px;
 }
 .img-select {
     display: flex;
@@ -132,6 +134,7 @@ img{
 }
 .product-content{
     padding: 2rem 1rem;
+    margin-top:120px;
 }
 .product-title{
     font-size: 3rem;
@@ -148,7 +151,7 @@ img{
     bottom: 0;
     height: 4px;
     width: 80px;
-    background: #12263a;
+    background: #000000;
 }
 .product-link{
     text-decoration: none;
@@ -191,7 +194,9 @@ img{
     text-transform: capitalize;
     color: #12263a;
     padding-bottom: 0.6rem;
+    font-size: 24px;
 }
+
 .product-detail p{
     font-size: 0.9rem;
     padding: 0.3rem;
