Final CSS to Detail-Product

--- a/CSS/product.css
+++ b/CSS/product.css
@@ -92,6 +92,7 @@ body{
 .card-wrapper{
     max-width: 1100px;
     margin: 0 auto;
+    margin-top:25px;
 }
 img{
     width: 100%;
@@ -133,8 +134,9 @@ img{
     opacity: 0.8;
 }
 .product-content{
+    z-index: -999;
     padding: 2rem 1rem;
-    margin-top:120px;
+    margin-top: 190px;
 }
 .product-title{
     font-size: 3rem;
