--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -279,7 +279,7 @@ form {
 }
 
 
-@media (max-width: 670px) {
+@media screen and (max-width: 670px) {
     .container {
         flex-direction: column;
         gap: 40px;
