--- a/CSS/about.css
+++ b/CSS/about.css
@@ -78,6 +78,20 @@ nav {
     display: block;
 }
 
+li a.login-button {
+    border: 2px solid #4caf50;
+    padding: 10px 10px;
+    border-radius: 25px;
+    transition: border 0.3s ease;
+    text-decoration: none;
+}
+
+li a.login-button:hover {
+    border-color: rgb(205, 124, 17);
+    background-color: rgb(205, 124, 17);
+    color: #f4f4f4;
+}
+
 /* ABOUT */
 /* About Brand */
 .about-brand h1 {
