--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,11 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-
+    
 }
 
 body {
     width: 100%;
+    
 }
 nav {
     display: flex;
@@ -83,6 +84,20 @@ nav {
 
 .nav-link li:hover .dropdown {
     display: block;
+}
+
+li a.login-button {
+    border: 2px solid #4caf50;
+    padding: 10px 10px;
+    border-radius: 25px;
+    transition: border 0.3s ease;
+    text-decoration: none;
+}
+
+li a.login-button:hover {
+    border-color: rgb(205, 124, 17);
+    background-color: rgb(205, 124, 17);
+    color: #f4f4f4;
 }
 
 header{
