--- a/CSS/product.css
+++ b/CSS/product.css
@@ -20,6 +20,7 @@ nav {
     position: sticky;
     top: 0;
     box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1);
+    z-index: 300;
 }
 
 .name-logo {
@@ -76,6 +77,21 @@ nav {
 .nav-link li:hover .dropdown {
     display: block;
 }
+
+li a.login-button {
+    border: 2px solid #4caf50;
+    padding: 10px 10px;
+    border-radius: 25px;
+    transition: border 0.3s ease;
+    text-decoration: none;
+}
+
+li a.login-button:hover {
+    border-color: rgb(205, 124, 17);
+    background-color: rgb(205, 124, 17);
+    color: #f4f4f4;
+}
+
 /* END OF NAVBAR */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
