--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -76,6 +76,20 @@ nav {
 .nav-link li:hover .dropdown {
     display: block;
 }
+
+li a.login-button {
+    border: 2px solid #4caf50;
+    padding: 10px 10px;
+    border-radius: 25px;
+    transition: border 0.3s ease;
+    text-decoration: none;
+}
+
+li a.login-button:hover {
+    border-color: rgb(205, 124, 17);
+    background-color: rgb(205, 124, 17);
+    color: #f4f4f4;
+}
 /* END OF NAVBAR */
 
 .title {
