--- a/CSS/about.css
+++ b/CSS/about.css
@@ -92,6 +92,14 @@ li a.login-button:hover {
     color: #f4f4f4;
 }
 
+.menu-icon {
+    display: none;
+}
+
+.small-menu {
+    display: none;
+}
+
 /* ABOUT */
 /* About Brand */
 .about-brand h1 {
@@ -370,24 +378,45 @@ footer {
 
 
 @media screen and (max-width: 820px) {
-    nav {
-        flex-direction: column;
-    }
-        
     .nav-link {
-        margin-top: 30px;
         flex-direction: column;
-        text-align: center;
-        gap: 20px;
+        align-items: center;
+        position: absolute;
+        padding-bottom: 30px;
+        top: 70px;
+        left: 0;
+        right: 0;
+        background-color: white;
+        display: none;    
+        gap: 30px;
     }
         
-    .nav-link li {
-        width: 100%;
+    .nav-link.show { /*tampil jika diklik*/
+        display: flex;        
+    }
+    
+    .dropdown {
+        display: none !important;
     }
         
-    .nav-link a {
-        font-size: 16px;
-        padding: 10px 0;
+    .small-menu {
+        display: block;
+    }
+    .nav-link .small-menu a {
+        font-size: 11px;
+        transition: background-color 0.3s ease;
+    }
+
+    .nav-link .small-menu a:hover {
+        color: rgb(190, 109, 3);
+        border-bottom: none;
+        font-weight: bolder;
+    }
+    
+    .menu-icon {
+        display: flex;
+        font-size: 30px;
+        cursor: pointer;
     }
         
     .brand-story-content {
