--- a/CSS/product.css
+++ b/CSS/product.css
@@ -92,6 +92,14 @@ li a.login-button:hover {
     color: #f4f4f4;
 }
 
+.menu-icon {
+    display: none;
+}
+
+.small-menu {
+    display: none;
+}
+
 /* END OF NAVBAR */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
@@ -328,5 +336,50 @@ img{
     }
     .product-content{
         padding-top: 0;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .nav-link {
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        padding-bottom: 30px;
+        top: 70px;
+        left: 0;
+        right: 0;
+        background-color: white;
+        display: none;
+        gap: 30px;
+    }
+
+    .nav-link.show {
+        /*tampil jika diklik*/
+        display: flex;
+    }
+
+    .dropdown {
+        display: none !important;
+    }
+
+    .small-menu {
+        display: block;
+    }
+
+    .nav-link .small-menu a {
+        font-size: 11px;
+        transition: background-color 0.3s ease;
+    }
+
+    .nav-link .small-menu a:hover {
+        color: rgb(190, 109, 3);
+        border-bottom: none;
+        font-weight: bolder;
+    }
+
+    .menu-icon {
+        display: flex;
+        font-size: 30px;
+        cursor: pointer;
     }
 }
