--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -90,6 +90,15 @@ li a.login-button:hover {
     background-color: rgb(205, 124, 17);
     color: #f4f4f4;
 }
+
+.menu-icon {
+    display: none;
+}
+
+.small-menu {
+    display: none;
+}
+
 /* END OF NAVBAR */
 
 .title {
@@ -189,6 +198,51 @@ li a.login-button:hover {
 @media (max-width: 1024px) {
     .product-item {
         width: calc(33.333% - 20px);
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .nav-link {
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        padding-bottom: 30px;
+        top: 70px;
+        left: 0;
+        right: 0;
+        background-color: white;
+        display: none;
+        gap: 30px;
+    }
+
+    .nav-link.show {
+        /*tampil jika diklik*/
+        display: flex;
+    }
+
+    .dropdown {
+        display: none !important;
+    }
+
+    .small-menu {
+        display: block;
+    }
+
+    .nav-link .small-menu a {
+        font-size: 11px;
+        transition: background-color 0.3s ease;
+    }
+
+    .nav-link .small-menu a:hover {
+        color: rgb(190, 109, 3);
+        border-bottom: none;
+        font-weight: bolder;
+    }
+
+    .menu-icon {
+        display: flex;
+        font-size: 30px;
+        cursor: pointer;
     }
 }
 
