--- a/CSS/login.css
+++ b/CSS/login.css
@@ -26,11 +26,12 @@ body {
 
 .left {
     width: 40%;
-    background-image: url('../Assets/Images/Free_Leaf_Pattern_Vector.jpg');
+    background-image: url('../Assets/Images/leaf.png');
     background-size: cover;
     background-position: center;
+    opacity: 0.8;
     padding: 40px;
-    color: #333;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -38,14 +39,16 @@ body {
 
 .left h2 {
     font-size: 28px;
+    font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
 }
 
 .left p {
     font-size: 14px;
+    font-weight: bold;
     line-height: 1.2;
-    text-align: justify;
+    text-align: center;
 }
 
 .right {
@@ -127,7 +130,7 @@ form p {
     font-size: 14px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
     body {
         align-items: flex-start;
         background-color: #f9fffa;
