--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -98,11 +98,12 @@ form p {
 /* Right */
 .right {
     width: 40%;
-    background-image: url('../Assets/Images/Free_Leaf_Pattern_Vector.jpg');
+    background-image: url('../Assets/Images/wood.jpg');
     background-size: cover;
     background-position: center;
+    opacity: 0.8;
     padding: 40px;
-    color: #333;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -110,17 +111,19 @@ form p {
 
 .right h2 {
     font-size: 28px;
+    font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
 }
 
 .right p {
     font-size: 14px;
+    font-weight: bold;
     line-height: 1.2;
-    text-align: justify;
+    text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
     body {
         align-items: flex-start;
         background-color: #f9fffa;
