--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -197,9 +197,14 @@ li a.login-button:hover {
 
 @media (max-width: 1024px) {
     .product-item {
-        width: calc(33.333% - 20px);
+        width: calc(33.333% - 10px);
     }
 }
+
+    .img-display .img-display img{
+
+
+    }
 
 @media screen and (max-width: 820px) {
     .nav-link {
