--- a/CSS/about.css
+++ b/CSS/about.css
@@ -199,8 +199,8 @@ li a.login-button:hover {
 }
 
 .funfact h2 {
-    margin: 10px 40px -10px 40px;
-    font-size: 24px;
+    margin: 10px 40px 9px 40px;
+    font-size: 26px;
 }
 
 .funfact-content {
@@ -356,23 +356,17 @@ footer {
     font-size: 14px;
 }
 
-@media screen and (max-width: 1100px){
-    .funfact h2 {
-        margin: 10px 40px 25px 40px !important;
-    }   
-}
-
-@media  screen and (max-width: 1000px) {
-    .funfact h2 {
-        margin: 10px 40px 30px 40px !important; 
-        font-size: 22px;
+@media  screen and (max-width: 1120px) {
+    .funfact-content {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
     }
-}
-
-@media screen and (max-width: 900px) {
+    
     .funfact h2 {
-        margin: 10px 40px 60px 40px !important;
-        font-size: 22px;
+        text-align: center ;
+        margin-bottom: 80px ;
+        margin-top: -20px ;
     }
 }
 
