--- a/CSS/index.css
+++ b/CSS/index.css
@@ -272,6 +272,7 @@ footer {
     margin:30px;
     height:auto;
     margin-left: 0px;
+    background-color: #ececec;
 }
 
 .carousel-slide {
@@ -285,6 +286,7 @@ footer {
     opacity: 0;
     position: absolute;
     left: 0;
+    
 }
 
 .carousel-item.active {
@@ -316,10 +318,12 @@ footer {
     box-shadow: 0 10px 20px #dbdbdb; /* Bayangan */
     margin: 0; /* Hapus margin untuk penempatan yang tepat */
     overflow: hidden;
+    
 }
 .container-wrapper {
     position: relative; /* Atur posisi induk menjadi relatif */
     min-height: 100vh; /* Pastikan wrapper minimal setinggi viewport */
+    
 }
 .container .slide .item{
     width: 200px;
@@ -568,10 +572,10 @@ footer {
     }
 
     .carousel-item {
-        max-width: 35%;
+        max-width: 30%;
         align-items: center;
         justify-content: center;
-        margin-left:-26%;
+        margin-left:-33%;
     }
 
     .carousel-container h2{
